# rsyncthing

./: .gitignore  README.md  pyproject.toml
src/rsyncthing/: cli.py  syncthing_connection.py
