[project]
name = "rsyncthing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "asyncssh>=2.22.0",
    "cyclopts>=4.5.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
]

[project.scripts]
rsyncthing = "rsyncthing.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
